--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section>
     <h1 class="title">Open! (Says Me)</h1>
     <h2 class="author">Rick O. Gilmore</h2>
-    <h3 class="date">2018-05-26 05:56:33</h3>
+    <h3 class="date">2018-05-26 08:48:01</h3>
 </section>
 
 <section><section id="prelminaries" class="titleslide slide level1"><h1>Prelminaries</h1></section><section class="slide level2">
@@ -468,8 +468,8 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </section><section id="overview" class="slide level2">
 <h2>Overview</h2>
 <ul>
-<li>Why share?</li>
-<li>How to share</li>
+<li>Why share data &amp; materials?</li>
+<li>How to share data &amp; materials</li>
 <li>Why open sharing advances psychological science</li>
 </ul>
 </section></section>
@@ -538,21 +538,6 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </section><section class="slide level2">
 
 <p><img src="img/psych-harder-2.jpg" height=550px/></p>
-</section><section class="slide level2">
-
-<p><img src="https://cdn-images-1.medium.com/max/1600/1*4UPp3Tc4A32S0WXJ0pWP7g.jpeg" height=500px/></p>
-</section><section id="the-tootbrush-problem-mischel-2009" class="slide level2">
-<h2>The tootbrush problem (Mischel, 2009)</h2>
-</section><section class="slide level2">
-
-<blockquote>
-<p>“<em>…psychologists tend to treat other peoples’ theories like toothbrushes; no self-respecting individual wants to use anyone else’s.</em>”</p>
-</blockquote>
-</section><section class="slide level2">
-
-<blockquote>
-<p>“<em>The toothbrush culture undermines the building of a genuinely cumulative science, encouraging more parallel play and solo game playing, rather than building on each other’s directly relevant best work.</em>”</p>
-</blockquote>
 </section><section id="studies-are-underpowered" class="slide level2">
 <h2>Studies are underpowered</h2>
 </section><section class="slide level2">
@@ -575,12 +560,8 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <aside class="notes">
 <p>So, this means that we may not know what we think we know.</p>
 </aside>
-</section><section class="slide level2">
-
-<div class="centered">
-<p><img src="http://www.clubbinghouse.com/images/photos/covers/20080403153957.jpg" height=450px/></p>
-<p>…grants, …students, …data</p>
-</div>
+</section><section id="published-papers-have-errors" class="slide level2">
+<h2>Published papers have errors</h2>
 </section><section class="slide level2">
 
 <div class="centered">
@@ -595,14 +576,6 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <aside class="notes">
 <p>Statistical reporting errors in the published literature are more common that many might think.</p>
 </aside>
-</section><section id="data-sharing-far-too-rare" class="slide level2">
-<h2>Data sharing far too rare</h2>
-</section><section class="slide level2">
-
-<div class="centered">
-<p><img src="https://raw.githubusercontent.com/gilmore-lab/psu-data-repro-bootcamp-2017-07-10/master/img/wicherts_2006_amp_61_7_726_fig1a.jpg" height=550px></p>
-<p><small>(<a href="http://doi.org/10.1037/0003-066X.61.7.726">Wicherts et al., 2006</a>)</small></p>
-</div>
 </section><section id="confusion-about-data-ownership" class="slide level2">
 <h2>Confusion about data ownership</h2>
 <ul>
@@ -611,18 +584,47 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>Researchers</li>
 <li>Participants</li>
 </ul>
-</section></section>
-<section><section id="solutions" class="titleslide slide level1"><h1>Solutions</h1></section><section class="slide level2">
+</section><section id="share-findings-but-not-data-or-materials" class="slide level2">
+<h2>Share findings but not data or materials</h2>
+</section><section class="slide level2">
 
-<ul>
-<li>Mischel 2009
+<div class="centered">
+<p><img src="http://www.clubbinghouse.com/images/photos/covers/20080403153957.jpg" height=450px/></p>
+<p>…grants, …students, …data</p>
+</div>
+</section><section class="slide level2">
+
+<div class="centered">
+<p><img src="https://raw.githubusercontent.com/gilmore-lab/psu-data-repro-bootcamp-2017-07-10/master/img/wicherts_2006_amp_61_7_726_fig1a.jpg" height=550px></p>
+<p><small>(<a href="http://doi.org/10.1037/0003-066X.61.7.726">Wicherts et al., 2006</a>)</small></p>
+</div>
+</section><section id="cant-see-the-whole-elephant" class="slide level2">
+<h2>Can’t see the whole elephant</h2>
+</section><section class="slide level2">
+
+<p><img src="https://cdn-images-1.medium.com/max/1600/1*4UPp3Tc4A32S0WXJ0pWP7g.jpeg" height=500px/></p>
+</section><section id="the-toothbrush-problem-mischel-2009" class="slide level2">
+<h2>The toothbrush problem (Mischel, 2009)</h2>
+</section><section class="slide level2">
+
+<blockquote>
+<p>“<em>…psychologists tend to treat other peoples’ theories like toothbrushes; no self-respecting individual wants to use anyone else’s.</em>”</p>
+</blockquote>
+</section><section class="slide level2">
+
+<blockquote>
+<p>“<em>The toothbrush culture undermines the building of a genuinely cumulative science, encouraging more parallel play and solo game playing, rather than building on each other’s directly relevant best work.</em>”</p>
+</blockquote>
+</section></section>
+<section><section id="solutions" class="titleslide slide level1"><h1>Solutions</h1></section><section id="mischel-2009" class="slide level2">
+<h2>Mischel 2009</h2>
 <ul>
 <li>Common tools</li>
 <li>Robust, replicable, consequential findings</li>
 <li>Boundary crossing and bridge building</li>
-</ul></li>
-<li>Widespread open data &amp; materials sharing (Gilmore + a whole lotta folks…)</li>
 </ul>
+</section><section id="open-data-materials-sharing-as-the-norm-not-exception" class="slide level2">
+<h2>Open data &amp; materials sharing as the norm not exception</h2>
 </section><section id="plan-for-sharing" class="slide level2">
 <h2>Plan for sharing</h2>
 <ul>
@@ -749,7 +751,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <p><a href="https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/" class="uri">https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/</a></p>
 </section><section class="slide level2">
 
-<p>This talk was produced on 2018-05-26 05:56:33 in <a href="http://rstudio.com">RStudio 1.1.383</a> using R Markdown and the reveal.JS framework. The code and materials used to generate the slides may be found at <a href="https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/" class="uri">https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/</a>. Information about the R Session that produced the slides is as follows:</p>
+<p>This talk was produced on 2018-05-26 08:48:01 in <a href="http://rstudio.com">RStudio 1.1.383</a> using R Markdown and the reveal.JS framework. The code and materials used to generate the slides may be found at <a href="https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/" class="uri">https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/</a>. Information about the R Session that produced the slides is as follows:</p>
 </section><section class="slide level2">
 
 <pre><code>## R version 3.4.4 (2018-03-15)
