--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section>
     <h1 class="title">Open! (Says Me)</h1>
     <h2 class="author">Rick O. Gilmore</h2>
-    <h3 class="date">2018-05-26 08:48:01</h3>
+    <h3 class="date">2018-05-26 09:23:30</h3>
 </section>
 
 <section><section id="prelminaries" class="titleslide slide level1"><h1>Prelminaries</h1></section><section class="slide level2">
@@ -586,12 +586,11 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </ul>
 </section><section id="share-findings-but-not-data-or-materials" class="slide level2">
 <h2>Share findings but not data or materials</h2>
-</section><section class="slide level2">
-
-<div class="centered">
-<p><img src="http://www.clubbinghouse.com/images/photos/covers/20080403153957.jpg" height=450px/></p>
-<p>…grants, …students, …data</p>
-</div>
+<!-- --- -->
+<!-- <div class="centered"> -->
+<!-- <img src="http://www.clubbinghouse.com/images/photos/covers/20080403153957.jpg" height=450px/> -->
+<!-- ...grants, ...students, ...data -->
+<!-- </div> -->
 </section><section class="slide level2">
 
 <div class="centered">
@@ -623,8 +622,10 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>Robust, replicable, consequential findings</li>
 <li>Boundary crossing and bridge building</li>
 </ul>
-</section><section id="open-data-materials-sharing-as-the-norm-not-exception" class="slide level2">
-<h2>Open data &amp; materials sharing as the norm not exception</h2>
+</section><section id="open-data-materials-sharing" class="slide level2">
+<h2>Open data &amp; materials sharing</h2>
+</section><section id="as-the-norm-not-the-exception" class="slide level2">
+<h2>…as the norm not the exception</h2>
 </section><section id="plan-for-sharing" class="slide level2">
 <h2>Plan for sharing</h2>
 <ul>
@@ -660,7 +661,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>Data repository
 <ul>
 <li><a href="https://www.icpsr.umich.edu/">ICPSR</a>, <a href="http://dataverse.org">Dataverse</a>, <a href="https://osf.io">OSF</a>, <a href="https://">Dryad</a> (domain/measure general)</li>
-<li><a href="https://databrary.org">Databrary</a> (behavioral science)</li>
+<li><a href="https://databrary.org">Databrary</a> (behavioral science; video/audio ++)</li>
 <li><a href="https://openneuro.org">OpenNeuro</a>, <a href="https://talkbank.org">TalkBank</a>, <a href="http://wordbank.stanford.edu/">WordBank</a> (measure-specific)</li>
 </ul></li>
 <li>Institutional repository</li>
@@ -694,7 +695,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <h2>How</h2>
 <ul>
 <li>“FAIRly”</li>
-<li><strong>F</strong>indable, <strong>A</strong>ccesible, <strong>I</strong>nteroperable, and <strong>R</strong>eusable (Wilkinson et al., 2016)</li>
+<li><strong>F</strong>indable, <strong>A</strong>ccesible, <strong>I</strong>nteroperable, and <strong>R</strong>eusable <a href="http://dx.doi.org/10.1038/sdata.2016.18">(Wilkinson et al., 2016)</a></li>
 </ul>
 </section><section id="ethically" class="slide level2">
 <h2>Ethically</h2>
@@ -716,17 +717,11 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li><em>With</em> expectation of ethical use <strong>AND</strong> proper citation</li>
 </ul>
 </section></section>
-<section><section id="lets" class="titleslide slide level1"><h1>Let’s</h1></section><section id="build-a" class="slide level2">
-<h2>build a</h2>
-<ul>
-<li class="fragment">Robust</li>
-<li class="fragment">Transparent</li>
-<li class="fragment">Reproducible</li>
-<li class="fragment">Powerful</li>
-<li class="fragment">Awesome</li>
-<li class="fragment">Cumulative</li>
-<li class="fragment">Psychological Science</li>
-</ul>
+<section><section id="lets" class="titleslide slide level1"><h1>Let’s</h1></section><section id="build-platforms-for-discovery" class="slide level2">
+<h2>…build platforms for discovery</h2>
+<p>that will make physicists jealous</p>
+</section><section id="acknowledge-the-elephant-in-the-room" class="slide level2">
+<h2>…acknowledge the elephant in the room</h2>
 </section><section class="slide level2">
 
 <div class="centered">
@@ -740,9 +735,22 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <div class="centered">
 <p><img src="http://static.neatorama.com/images/2012-09/girl-hugging-elephant.jpg" height=550px></p>
 </div>
-</section></section>
-<section><section id="open-says-me" class="titleslide slide level1"><h1>Open! (Says me)</h1></section><section class="slide level2">
+</section><section id="build-a" class="slide level2">
+<h2>…build a</h2>
+<ul>
+<li class="fragment">Robust</li>
+<li class="fragment">Transparent</li>
+<li class="fragment">Reproducible</li>
+<li class="fragment">Powerful</li>
+<li class="fragment">Cumulative</li>
+<li class="fragment">(Awesome!)</li>
+<li class="fragment">Psychological Science</li>
+</ul>
+</section><section class="slide level2">
 
+<p><img src="https://cdn.shopify.com/s/files/1/0212/6252/products/Screen_Shot_2015-03-31_at_5.10.12_PM_large.png?v=1427892157" height=550px/></p>
+</section><section id="open-says-me" class="slide level2">
+<h2>Open! (Says me)</h2>
 <video width="600" loop data-autoplay>
 <source src="mov/databrary-splash.mp4" type="video/mp4">
 </video>
@@ -751,7 +759,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <p><a href="https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/" class="uri">https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/</a></p>
 </section><section class="slide level2">
 
-<p>This talk was produced on 2018-05-26 08:48:01 in <a href="http://rstudio.com">RStudio 1.1.383</a> using R Markdown and the reveal.JS framework. The code and materials used to generate the slides may be found at <a href="https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/" class="uri">https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/</a>. Information about the R Session that produced the slides is as follows:</p>
+<p>This talk was produced on 2018-05-26 09:23:30 in <a href="http://rstudio.com">RStudio 1.1.383</a> using R Markdown and the reveal.JS framework. The code and materials used to generate the slides may be found at <a href="https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/" class="uri">https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/</a>. Information about the R Session that produced the slides is as follows:</p>
 </section><section class="slide level2">
 
 <pre><code>## R version 3.4.4 (2018-03-15)
