Final edits before talk

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section>
     <h1 class="title">Open! (Says Me)</h1>
     <h2 class="author">Rick O. Gilmore</h2>
-    <h3 class="date">2018-05-26 09:24:13</h3>
+    <h3 class="date">2018-05-26 12:56:45</h3>
 </section>
 
 <section><section id="prelminaries" class="titleslide slide level1"><h1>Prelminaries</h1></section><section class="slide level2">
@@ -470,7 +470,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <ul>
 <li>Why share data &amp; materials?</li>
 <li>How to share data &amp; materials</li>
-<li>Why open sharing advances psychological science</li>
+<li>Why open sharing of data &amp; materials will advance psychological science</li>
 </ul>
 </section></section>
 <section><section id="imagine" class="titleslide slide level1"><h1>Imagine</h1></section><section id="meta-analyses-from-your-desktop" class="slide level2">
@@ -557,9 +557,6 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </blockquote>
 <p><small>(<a href="http://doi.org/10.1371/journal.pbio.2000797">Szucs &amp; Ioannides, 2017</a>)</small></p>
 </div>
-<aside class="notes">
-<p>So, this means that we may not know what we think we know.</p>
-</aside>
 </section><section id="published-papers-have-errors" class="slide level2">
 <h2>Published papers have errors</h2>
 </section><section class="slide level2">
@@ -584,26 +581,21 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>Researchers</li>
 <li>Participants</li>
 </ul>
-</section><section id="share-findings-but-not-data-or-materials" class="slide level2">
-<h2>Share findings but not data or materials</h2>
-<!-- --- -->
-<!-- <div class="centered"> -->
-<!-- <img src="http://www.clubbinghouse.com/images/photos/covers/20080403153957.jpg" height=450px/> -->
-<!-- ...grants, ...students, ...data -->
-<!-- </div> -->
+</section><section id="eagerly-share-findings-but-not-data-or-materials" class="slide level2">
+<h2>Eagerly share findings but not data or materials</h2>
 </section><section class="slide level2">
 
 <div class="centered">
 <p><img src="https://raw.githubusercontent.com/gilmore-lab/psu-data-repro-bootcamp-2017-07-10/master/img/wicherts_2006_amp_61_7_726_fig1a.jpg" height=550px></p>
 <p><small>(<a href="http://doi.org/10.1037/0003-066X.61.7.726">Wicherts et al., 2006</a>)</small></p>
 </div>
-</section><section id="cant-see-the-whole-elephant" class="slide level2">
-<h2>Can’t see the whole elephant</h2>
+</section><section id="blinded-from-seeing-the-whole-elephant" class="slide level2">
+<h2>Blinded from seeing the whole elephant</h2>
 </section><section class="slide level2">
 
 <p><img src="https://cdn-images-1.medium.com/max/1600/1*4UPp3Tc4A32S0WXJ0pWP7g.jpeg" height=500px/></p>
-</section><section id="the-toothbrush-problem-mischel-2009" class="slide level2">
-<h2>The toothbrush problem (Mischel, 2009)</h2>
+</section><section id="fall-victim-to-the-toothbrush-problem-mischel-2009" class="slide level2">
+<h2>Fall victim to the toothbrush problem (Mischel, 2009)</h2>
 </section><section class="slide level2">
 
 <blockquote>
@@ -622,15 +614,16 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>Robust, replicable, consequential findings</li>
 <li>Boundary crossing and bridge building</li>
 </ul>
-</section><section id="open-data-materials-sharing" class="slide level2">
-<h2>Open data &amp; materials sharing</h2>
-</section><section id="as-the-norm-not-the-exception" class="slide level2">
-<h2>…as the norm not the exception</h2>
+</section><section id="make-open-data-materials-sharing" class="slide level2">
+<h2>Make open data &amp; materials sharing</h2>
+</section><section id="the-norm-not-the-exception" class="slide level2">
+<h2>…the norm not the exception</h2>
 </section><section id="plan-for-sharing" class="slide level2">
 <h2>Plan for sharing</h2>
 <ul>
 <li>From the earliest stages</li>
 <li>Data Management Plans (NSF and NIH proposals)</li>
+<li>Data as a “first order” research product</li>
 </ul>
 </section><section id="what-to-share" class="slide level2">
 <h2>What to share</h2>
@@ -638,6 +631,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>Data
 <ul>
 <li>&amp; analysis code/scripts (R, Python, SPSS, SAS, …)</li>
+<li>Rawest possible (trial-level, individual, …)</li>
 </ul></li>
 <li>Displays (&amp; code to generate)</li>
 <li>Protocols &amp; procedures
@@ -652,9 +646,8 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </div>
 </section><section class="slide level2">
 
-<div class="centered">
 <p><a href="https://dev1.ed-projects.nyu.edu/wikis/docuwiki"> <img src="https://github.com/gilmore-lab/sips-2017-video-reproducibility/blob/master/img/play-wiki.jpg?raw=true" height=500px> </a></p>
-</div>
+<p>The PLAY Project Wiki: <a href="https://dev1.ed-projects.nyu.edu/wikis/docuwiki/doku.php/landing" class="uri">https://dev1.ed-projects.nyu.edu/wikis/docuwiki/doku.php/landing</a></p>
 </section><section id="where-to-share" class="slide level2">
 <h2>Where to share</h2>
 <ul>
@@ -664,9 +657,9 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li><a href="https://databrary.org">Databrary</a> (behavioral science; video/audio ++)</li>
 <li><a href="https://openneuro.org">OpenNeuro</a>, <a href="https://talkbank.org">TalkBank</a>, <a href="http://wordbank.stanford.edu/">WordBank</a> (measure-specific)</li>
 </ul></li>
-<li>Institutional repository</li>
 <li>Supplemental material with article</li>
 <li>Data paper (e.g. <em>Nature Scientific Data</em>)</li>
+<li>Institutional repository</li>
 </ul>
 </section><section id="with-whom" class="slide level2">
 <h2>With whom</h2>
@@ -695,7 +688,12 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <h2>How</h2>
 <ul>
 <li>“FAIRly”</li>
-<li><strong>F</strong>indable, <strong>A</strong>ccesible, <strong>I</strong>nteroperable, and <strong>R</strong>eusable <a href="http://dx.doi.org/10.1038/sdata.2016.18">(Wilkinson et al., 2016)</a></li>
+<li><strong>F</strong>indable, <strong>A</strong>ccesible, <strong>I</strong>nteroperable, and <strong>R</strong>eusable <a href="http://dx.doi.org/10.1038/sdata.2016.18">(Wilkinson et al., 2016)</a>
+<ul>
+<li>Easier to find in repository</li>
+<li>Interoperable formats</li>
+<li>Codebooks</li>
+</ul></li>
 </ul>
 </section><section id="ethically" class="slide level2">
 <h2>Ethically</h2>
@@ -703,12 +701,17 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>Ask permission to share (especially for sensitive, identifiable data)
 <ul>
 <li>Use template language</li>
-<li>Gilmore &amp; Nilsonne, 2017: <a href="https://osf.io/9d5hr/" class="uri">https://osf.io/9d5hr/</a></li>
+<li><a href="https://osf.io/9d5hr/">(Gilmore &amp; Nilsonne, 2017)</a></li>
 </ul></li>
-<li>Don’t promise to destroy data</li>
+<li>Don’t promise to destroy data (but GDPR?)</li>
 <li>Don’t unduly restrict future reuses</li>
-<li>Sharing data maximizes benefits of research participation <a href="http://dx.doi.org/10.1016/j.neuroimage.2013.02.040">(Brakewood &amp; Poldack, 2013)</a></li>
 </ul>
+</section><section class="slide level2">
+
+<blockquote>
+<p>“<em>the principles of human subject research require an analysis of both risks and benefits…such an analysis suggests that researchers may have a positive duty to share data in order to maximize the contribution that individual participants have made.</em>”</p>
+</blockquote>
+<p><small>(<a href="http://dx.doi.org/10.1016/j.neuroimage.2013.02.040">Brakewood &amp; Poldack, 2013</a>)</small></p>
 </section><section id="openly" class="slide level2">
 <h2>Openly</h2>
 <ul>
@@ -742,6 +745,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li class="fragment">Transparent</li>
 <li class="fragment">Reproducible</li>
 <li class="fragment">Powerful</li>
+<li class="fragment">Openly shared</li>
 <li class="fragment">Cumulative</li>
 <li class="fragment">(Awesome!)</li>
 <li class="fragment">Psychological Science</li>
@@ -759,7 +763,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <p><a href="https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/" class="uri">https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/</a></p>
 </section><section class="slide level2">
 
-<p>This talk was produced on 2018-05-26 09:24:13 in <a href="http://rstudio.com">RStudio 1.1.383</a> using R Markdown and the reveal.JS framework. The code and materials used to generate the slides may be found at <a href="https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/" class="uri">https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/</a>. Information about the R Session that produced the slides is as follows:</p>
+<p>This talk was produced on 2018-05-26 12:56:45 in <a href="http://rstudio.com">RStudio 1.1.383</a> using R Markdown and the reveal.JS framework. The code and materials used to generate the slides may be found at <a href="https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/" class="uri">https://github.com/gilmore-lab/2018-05-26-aps-opensaysme/</a>. Information about the R Session that produced the slides is as follows:</p>
 </section><section class="slide level2">
 
 <pre><code>## R version 3.4.4 (2018-03-15)
